--- a/sgvizler/cornwall.html
+++ b/sgvizler/cornwall.html
@@ -21,7 +21,7 @@
          data-sgvizler-query="
              SELECT ?place ?population
              WHERE {
-                 ?rsrc <http://gaffer.test/#town-population> ?population .
+                 ?rsrc <https://github.com/cybermaggedon/#town-population> ?population .
 		 ?rsrc <http://purl.org/dc/elements/1.1/title> ?place .
              }
              ORDER BY DESC(?population)
@@ -37,7 +37,7 @@
          data-sgvizler-query="
              SELECT ?place ?population
              WHERE {
-                 ?rsrc <http://gaffer.test/#town-population> ?population .
+                 ?rsrc <https://github.com/cybermaggedon/#town-population> ?population .
 		 ?rsrc <http://purl.org/dc/elements/1.1/title> ?place .
              }
              ORDER BY DESC(?population)
